third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/unpack_wrong_type.exp

Diagnostics:
error: cannot assign `T` to left-hand side of type `X`
  ┌─ tests/checking/typing/v1-commands/unpack_wrong_type.move:6:9
  │
6 │         X { b: _ } = t;
  │         ^^^^^^^^^^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/typing/v1-commands/unpack_wrong_type.move:6:23
  │
6 │         X { b: _ } = t;
  │                       ^
